# notes_async_api

./: .env.example  .gitignore  README.md  docker-compose.yml
project/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
project/app/: database.py  main.py  models.py  test_main.http
project/app/notes/: boards.py  notes.py
project/migrations/: env.py
project/migrations/versions/: 92d8c8127fbc_init.py
