[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Lashkevich <prostospirit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
alembic = "^1.11.2"
asyncpg = "^0.28.0"
asyncpgsa = "^0.27.1"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
